--- a/hub.html
+++ b/hub.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>YouLike Hub</title>
-  <script type="text/javascript" src="/hub.8570cccfc468cea9ae26.js"></script></head>
+  <script type="text/javascript" src="/vendor.8570cccfc468cea9ae26.js"></script><script type="text/javascript" src="/hub.8570cccfc468cea9ae26.js"></script></head>
   <body>
   </body>
 </html>
