--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html class="no-js" ng-app="app" ng-strict-di>
 
@@ -14,13 +13,13 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link href="/app.css" rel="stylesheet"></head>
+</head>
 
 <body>
     <div ui-view>
         <span>Загрузка...</span>
     </div>
-    <script src="https://apis.google.com/js/api.js"></script>
-<script type="text/javascript" src="/vendor.9e39bf5f0c01dfbb7773.js"></script><script type="text/javascript" src="/app.9e39bf5f0c01dfbb7773.js"></script></body>
+<script src="https://apis.google.com/js/api.js"></script>
+<script type="text/javascript" src="/app.d61640a7ea8d02d2a9c5.js"></script><script type="text/javascript" src="/vendor.d61640a7ea8d02d2a9c5.js"></script></body>
 
 </html>
